--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:background="@color/color_primary_default"
             app:contentInsetStart="16dp"
             app:menu="@menu/main_list_menu">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,15 +44,16 @@
 
     <Button
         android:id="@+id/test_button"
-        android:layout_width="20dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@color/color_primary_default"/>
+        android:background="@color/color_primary_default"
+        android:text="HISTORY DATE" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.viewpager2.widget.ViewPager2>
+        android:layout_height="match_parent"/>
+
 
 
 </LinearLayout>
