--- a/app/src/main/res/layout/activity_leagues.xml
+++ b/app/src/main/res/layout/activity_leagues.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".LeaguesActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -18,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="@color/color_primary_default"
-            app:contentInsetStart="16dp"
-            app:menu="@menu/main_list_menu">
+            app:contentInsetStart="16dp">
 
             <ImageView
                 android:layout_width="wrap_content"
