--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -7,12 +7,15 @@
     android:orientation="vertical"
     tools:context=".ui.MatchesFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dates_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="horizontal"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/events_recycler_view"
             android:layout_width="match_parent"
