--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -110,11 +110,11 @@
         <TextView
             android:id="@+id/home_team_score"
             style="@style/Headline1Desktop"
-            android:layout_width="56dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="16dp"
-            android:gravity="right"
+            android:gravity="end"
             app:layout_constraintStart_toEndOf="@id/home_team_logo"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
@@ -122,11 +122,11 @@
         <TextView
             android:id="@+id/away_team_score"
             style="@style/Headline1Desktop"
-            android:layout_width="56dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="112dp"
-            android:gravity="left"
+            android:gravity="start"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="2" />
@@ -139,7 +139,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:text="-"
+            android:text="@string/dash"
             app:layout_constraintEnd_toStartOf="@id/away_team_score"
             app:layout_constraintStart_toEndOf="@id/home_team_score"
             app:layout_constraintTop_toTopOf="parent" />
@@ -156,5 +156,10 @@
             android:layout_marginStart="70dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/match_details_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
