--- a/app/src/main/res/layout/fragment_tournament_standings.xml
+++ b/app/src/main/res/layout/fragment_tournament_standings.xml
@@ -6,17 +6,16 @@
     tools:context=".ui.TournamentStandingsFragment"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
+        android:id="@+id/header_layout"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/standings_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"/>
+
 
 
 </LinearLayout>
