Refactoring & Implement team matches fragment

--- a/app/src/main/res/layout/foul_item.xml
+++ b/app/src/main/res/layout/foul_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="56dp">
 
     <ImageView
         android:id="@+id/incident_icon"
@@ -32,23 +32,35 @@
 
     <TextView
         android:id="@+id/incident_player_name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/incident_icon"
+        style="@style/Body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Cristiano Ronaldo"
-        style="@style/Body"/>
+        android:textColor="#121212"
+        app:layout_constraintStart_toEndOf="@id/incident_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Cristiano Ronaldo" />
 
     <TextView
+        android:id="@+id/incident_reason"
+        style="@style/Micro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/incident_reason"
-        app:layout_constraintTop_toBottomOf="@id/incident_player_name"
-        app:layout_constraintStart_toEndOf="@id/incident_time"
         android:layout_marginStart="20dp"
-        style="@style/Micro"
-        android:text="@string/foul"/>
+        android:text="@string/foul"
+        app:layout_constraintStart_toEndOf="@id/incident_time"
+        app:layout_constraintTop_toBottomOf="@id/incident_player_name" />
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/on_surface_on_surface_lv_4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/incident_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
