--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:background="@color/color_primary_default">
 
         <androidx.constraintlayout.widget.ConstraintLayout
