--- a/app/src/main/res/layout/fragment_team_standing.xml
+++ b/app/src/main/res/layout/fragment_team_standing.xml
@@ -5,30 +5,37 @@
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/surface_surface_2"
     android:orientation="vertical"
     tools:context=".ui.TeamStandingFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/spinner_layout_shape">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingVertical="4dp"
             android:paddingStart="12dp"
             android:paddingEnd="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:background="@drawable/spinner_shape">
 
             <ImageView
                 android:id="@+id/league_logo"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 tools:ignore="ContentDescription"
                 tools:src="@drawable/ic_launcher_background" />
 
@@ -36,21 +43,23 @@
                 android:id="@+id/team_leagues_spinner"
                 style="@style/Assistive"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"/>
         </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/surface_surface_1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/team_standings_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/surface_surface_1" />
 
 
 </LinearLayout>
