--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="56dp">
 
     <ImageView
         android:id="@+id/incident_icon"
@@ -33,6 +33,7 @@
     <TextView
         android:id="@+id/incident_player_name"
         style="@style/Body"
+        android:textColor="#121212"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -49,6 +50,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="14dp"
         android:gravity="end"
+        android:textColor="#121212"
         app:layout_constraintStart_toEndOf="@id/incident_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="14dp"
+        android:textColor="#121212"
         app:layout_constraintStart_toEndOf="@id/dash"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
@@ -72,9 +75,21 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="14dp"
         android:gravity="center"
+        android:text="@string/dash"
+        android:textColor="#121212"
         app:layout_constraintStart_toEndOf="@id/home_team_score"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/dash"
         tools:text="-" />
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/on_surface_on_surface_lv_4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/incident_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
