Refactoring header layouts

--- a/app/src/main/res/layout/basketball_standing_header.xml
+++ b/app/src/main/res/layout/basketball_standing_header.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/team_position"
@@ -12,6 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:minWidth="8dp"
         android:text="@string/ladder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:minWidth="80dp"
         android:text="@string/team"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/team_position"
@@ -36,12 +38,15 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/matches_played"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_name"
+        app:layout_constraintEnd_toStartOf="@id/team_matches_won"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -49,12 +54,14 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/wins"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_matches_played"
+        app:layout_constraintEnd_toStartOf="@id/team_matches_lost"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -64,11 +71,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_matches_won"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/losses"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/team_diff"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -77,11 +86,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_matches_lost"
+        android:gravity="center"
+        android:minWidth="32dp"
         android:text="@string/difference"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/team_str"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -90,11 +101,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_diff"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/str"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/team_games_behind"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -103,11 +116,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_str"
+        android:gravity="center"
+        android:minWidth="32dp"
         android:text="@string/gb"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/team_percentage"
 
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -116,11 +131,13 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_games_behind"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:minWidth="40dp"
         android:text="@string/pct"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
