--- a/app/src/main/res/layout/american_football_standing_header.xml
+++ b/app/src/main/res/layout/american_football_standing_header.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/team_position"
@@ -12,11 +12,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:minWidth="8dp"
         android:text="@string/ladder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/team_name"
@@ -26,22 +26,24 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:minWidth="104dp"
         android:text="@string/team"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/team_position"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/team_matches_played"
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="208dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/matches_played"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_name"
+        app:layout_constraintEnd_toStartOf="@id/team_matches_won"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -49,12 +51,12 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/wins"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_matches_played"
+        app:layout_constraintEnd_toStartOf="@id/team_matches_drew"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -62,13 +64,12 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/draws"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_matches_won"
-
+        app:layout_constraintEnd_toStartOf="@id/team_matches_lost"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -77,13 +78,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toEndOf="@id/team_matches_drew"
+        android:gravity="center"
+        android:minWidth="24dp"
         android:text="@string/losses"
-
+        app:layout_constraintEnd_toStartOf="@id/team_percentage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -93,10 +92,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:minWidth="40dp"
         android:text="@string/pct"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_matches_lost"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
