--- a/app/src/main/res/layout/basketball_standing_item.xml
+++ b/app/src/main/res/layout/basketball_standing_item.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/position_layout"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
-        android:background="@color/color_secondary_default"
+        android:background="@drawable/position_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,16 +22,13 @@
             style="@style/Tabular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="4dp"
+            android:gravity="center"
+            android:minWidth="16dp"
+            android:textColor="#121212"
             tools:text="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/team_name"
@@ -40,6 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:minWidth="80dp"
+        android:textColor="#121212"
         app:layout_constraintStart_toEndOf="@id/position_layout"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Boston" />
@@ -49,8 +48,12 @@
         style="@style/Tabular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="24dp"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_matches_won"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="37" />
@@ -61,7 +64,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="24dp"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_matches_lost"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="24" />
@@ -72,7 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="24dp"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_diff"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="22" />
@@ -84,7 +93,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="32dp"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_str"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="-255" />
@@ -95,10 +107,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="24dp"
+        android:text="@string/str_mock"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_gb"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="4" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -107,10 +122,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
+        android:gravity="center"
+        android:minWidth="32dp"
+        android:text="@string/gb_mock"
+        android:textColor="#121212"
         app:layout_constraintEnd_toStartOf="@id/team_percentage"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="16.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -121,6 +139,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:minWidth="40dp"
+        android:textColor="#121212"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="0.684" />
