--- a/app/src/main/res/layout/matches_item.xml
+++ b/app/src/main/res/layout/matches_item.xml
@@ -22,10 +22,10 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="3dp"
-            tools:text="13:00"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="13:00" />
 
         <TextView
             android:id="@+id/match_status"
@@ -36,21 +36,21 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="10dp"
-            tools:text="FT"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/match_time" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/surface_surface_1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/match_time"
+            tools:text="FT" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/on_surface_on_surface_lv_4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
